lectures/01/svc-cassandra.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: cassandra
  namespace: cassandra
  name: cassandra
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: cassandra
status:
  loadBalancer: {}
