lectures/01/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: frontend
  name: frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: backend
status:
  loadBalancer: {}
